[gd_scene load_steps=19 format=3 uid="uid://hpdsu5prhegj"]

[ext_resource type="Script" uid="uid://b2uaqdh6c08bf" path="res://main.gd" id="1_0xm2m"]
[ext_resource type="PackedScene" uid="uid://bpauduny6qd1p" path="res://chararter.tscn" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://c1ewg0dh0j2yi" path="res://maker.tscn" id="5_5vw27"]
[ext_resource type="PackedScene" uid="uid://bxkaqpvqk7nde" path="res://inventory.tscn" id="5_7mycd"]
[ext_resource type="PackedScene" uid="uid://f73ynbaimcwh" path="res://obsticle.tscn" id="5_272bh"]
[ext_resource type="Resource" uid="uid://jvrn7qlh4lgb" path="res://obsticle/obsticles/stone.tres" id="6_7mycd"]
[ext_resource type="Texture2D" uid="uid://c3e5wbl3nsmmv" path="res://Sprout Lands - Sprites - Basic pack/Sprout Lands - Sprites - Basic pack/Objects/Egg_item.png" id="6_ycdy4"]
[ext_resource type="Resource" uid="uid://c5fredjmniwtb" path="res://obsticle/obsticles/tree.tres" id="7_272bh"]
[ext_resource type="PackedScene" uid="uid://833wcgwovcmw" path="res://making_need.tscn" id="7_vivmo"]
[ext_resource type="Texture2D" uid="uid://du8tvftqb7ejv" path="res://icon.svg" id="7_w48qg"]
[ext_resource type="PackedScene" uid="uid://d4dfde0pxblf3" path="res://entity/entity.tscn" id="9_kek77"]
[ext_resource type="Resource" uid="uid://cgitg6blohyoe" path="res://entity/enemys/cow.tres" id="10_4c57u"]
[ext_resource type="Resource" uid="uid://cg5eu47jqa21b" path="res://entity/enemys/zombie.tres" id="11_efxa6"]
[ext_resource type="PackedScene" uid="uid://1pa03h4l3n8t" path="res://grid_map.tscn" id="13_ycdy4"]
[ext_resource type="PackedScene" uid="uid://b8f5g3olqr01k" path="res://making_veiw.tscn" id="14_w48qg"]

[sub_resource type="Environment" id="Environment_efxa6"]
glow_enabled = true
fog_enabled = true
fog_light_color = Color(0, 0, 0, 1)
fog_light_energy = 16.0
fog_density = 0.0

[sub_resource type="LabelSettings" id="LabelSettings_ycdy4"]
font_size = 61
font_color = Color(0, 0, 0, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_1bvp3"]
size = Vector3(29.9514, 0.001, 29.6758)

[node name="Node3D" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00180101, 2.38419e-07, 0.000293553)
script = ExtResource("1_0xm2m")

[node name="CharacterBody3D" parent="." instance=ExtResource("1_ig7tw")]

[node name="cam_angle" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="cam_angle"]
transform = Transform3D(1, 0, 0, 0, 0.47101194, 0.88212687, 0, -0.88212687, 0.47101194, 9.596348e-05, 0.9217843, 0.7910591)

[node name="mouse_ray" type="RayCast3D" parent="cam_angle/Camera3D"]
target_position = Vector3(0, 0, 0)
collision_mask = 4096
hit_from_inside = true
collide_with_areas = true

[node name="Marker3D" type="Marker3D" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_efxa6")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="inventory" parent="CanvasLayer" instance=ExtResource("5_7mycd")]

[node name="maker" parent="CanvasLayer" instance=ExtResource("5_5vw27")]
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
texture_filter = 1
offset_left = 1495.0
offset_top = 193.0
offset_right = 1695.0
offset_bottom = 393.0
mouse_filter = 2
texture = ExtResource("6_ycdy4")

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer"]
texture_filter = 1
offset_left = 1591.0001
offset_top = 285.0
offset_right = 1719.0001
offset_bottom = 785.0
rotation = 3.1415927
scale = Vector2(0.3, 0.3)
mouse_filter = 2
texture = ExtResource("7_w48qg")

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 1640.0
offset_top = 251.0
offset_right = 1701.0
offset_bottom = 423.0
text = "낮
"
label_settings = SubResource("LabelSettings_ycdy4")

[node name="Label2" type="Label" parent="CanvasLayer"]
offset_left = 1487.0
offset_top = 243.0
offset_right = 1548.0
offset_bottom = 415.0
text = "밤
"
label_settings = SubResource("LabelSettings_ycdy4")

[node name="making_need" parent="CanvasLayer" instance=ExtResource("7_vivmo")]
offset_left = 1399.2261
offset_top = 350.2977
offset_right = 1399.2261
offset_bottom = 350.29773

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0717891, -9.23721)
shape = SubResource("BoxShape3D_1bvp3")

[node name="obsticle" parent="." instance=ExtResource("5_272bh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0933293, -0.067472, -0.642673)
thing = ExtResource("6_7mycd")

[node name="obsticle2" parent="." instance=ExtResource("5_272bh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0970935, -0.0668175, -0.329145)
thing = ExtResource("6_7mycd")

[node name="obsticle3" parent="." instance=ExtResource("5_272bh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0933293, -0.067472, 0.0135138)
thing = ExtResource("7_272bh")

[node name="obsticle4" parent="." instance=ExtResource("5_272bh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.347702, -0.067472, -0.642673)
thing = ExtResource("7_272bh")

[node name="obsticle5" parent="." instance=ExtResource("5_272bh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.972406, -0.067472, -0.642673)

[node name="entity" parent="." instance=ExtResource("9_kek77")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.8604532, 0.0530233, 0.0365643)
thing = ExtResource("10_4c57u")

[node name="entity2" parent="." instance=ExtResource("9_kek77")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.1789432, 0.0530233, 0.7411267)
thing = ExtResource("11_efxa6")

[node name="day_night_timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.07017427, 0.99753475, 0, -0.99753475, 0.07017427, 0, 1.6861157, 0)
light_energy = 0.2

[node name="GridMap" parent="." instance=ExtResource("13_ycdy4")]

[node name="making_veiw" parent="." instance=ExtResource("14_w48qg")]

[connection signal="timeout" from="day_night_timer" to="." method="_on_day_night_timer_timeout"]
